samples/_failures_safe/1761129921_1dd0f5_compile_base_compile_error/stderr.txt
./samples/SAFE/__tmp_ccbd39c1.c: In function ‘main’:
./samples/SAFE/__tmp_ccbd39c1.c:155:28: error: missing terminating " character
  155 |                     printf("Error
      |                            ^~~~~~
./samples/SAFE/__tmp_ccbd39c1.c:155:21: error: expected expression at end of input
  155 |                     printf("Error
      |                     ^~~~~~
./samples/SAFE/__tmp_ccbd39c1.c:155:21: error: expected declaration or statement at end of input
./samples/SAFE/__tmp_ccbd39c1.c:155:21: error: expected declaration or statement at end of input
./samples/SAFE/__tmp_ccbd39c1.c:155:21: error: expected declaration or statement at end of input
./samples/SAFE/__tmp_ccbd39c1.c:155:21: error: expected declaration or statement at end of input
./samples/SAFE/__tmp_ccbd39c1.c:155:21: error: expected declaration or statement at end of input
